web/wp-content/themes/onelove/assets/scss/layout/_header.scss
// header stylesheet
// --------------
//
// Table of Contents:
//
// 1. Global
// 2. Mobile



// 1. Global
// ---------

$header-height: 70;
body:not(.display-mobile-menu) {
  margin-top: 70px;
}

#masthead {

  @include border('yes');
  background-color: $white;
  position: fixed;
  top: 0;
  z-index: 200;
  width: 100%;

  body.admin-bar & {
    top: 46px;
    @media screen and (min-width: 783px) {
      top: 32px;
    }
  }

  #site-navigation {
    max-width: 75rem;
    margin: 0 auto;
  }

  .title-bar-title {
    width: 98%;
    display: flex;
  }
  #menu-main-nav {
    &, &>li a  {
      height: rem-calc($header-height);
    }
  }
  .top-bar {
    .home > a:hover {
      background-color: inherit;
    }
    // max-width: large;
    .menu li:not(.home) a:hover:not(.button) {
      background-color: inherit;
    }
  }
  .title-bar {
    @include dimensions(null,rem-calc($header-height));
  }

  .title-bar,
  .top-bar {
    display: flex;

    .top-bar-right {
      margin-bottom: -.0625rem;
    }
    .menu-icon {
      @include dimensions(rem-calc(37),rem-calc(27));
      display: flex;
      align-self: center;

    }

    h3.head-menu-item {
      color: $sky;
    }
    li.menu-item {
      .submenu {
        background: $midnight url('/wp-content/themes/onelove/assets/images/submenu-arrow.svg') no-repeat center top;
        width: 22.5rem;
        padding: 3.125rem;
        left: 50%;
        top: calc(100%+1px);
        transform: translateX(-50%);
        right: auto;
        a {
          padding-top: .3125rem;
          padding-bottom: 1.25rem;
          height: auto;
          &:hover,
          &:active {
             h3.head-menu-item {
               color: $white;
               margin-bottom: 0;
               border: none;
               text-decoration: underline;
             }
          }
        head + body &  h3.head-menu-item {
            line-height: 1.875rem;
            color: $white;
            width: 100%;
            margin-top: 0;

          }
        }

        * {
          color: $white;
          text-align: center;
        }
      }
      &:not(.is-dropdown-submenu-item) > a {
        background-color: $white;
      }
    }

  }
  #menu-main-nav>li .submenu a {
    height: auto;
  }
  .menu li {
    &:not(:last-child) {
      border-right: initial;
    }
    &.current-menu-item:not(.donate-button) > a > h3,
    a:hover h3,
    a:active h3,
    &.menu-item-has-children.current-menu-parent > a > h3,
    &.current-menu-item a h1,
    a:hover h1,
    a:active h1,
     {
      border-bottom: .25rem solid;
      margin-bottom: .25rem;
    }
    body:not(.display-mobile-menu) & {
      &.menu-item-has-children.current-menu-parent > a > h3,
      &.current-menu-item:not(.donate-button) > a > h3,
      a:hover h3,
      a:active h3,
      &.current-menu-item a h1,
      a:hover h1,
      a:active h1,
       {
        color: $midnight;
        margin-bottom: -.25rem;
      }
    }
    & a  {
      display: flex;
      justify-content: left;
      align-items: center;
      h3 {
        margin-bottom: 0;
        margin-top: .875rem;
      }
    }
  }

  .header-logo-home img {
    height: 2.1875rem;
  }
}

.display-mobile-menu {
  overflow: hidden;
  position: fixed;

  #style-mobile-menu {
    position: fixed;
    @include dimensions(100%,100%);
    overflow-y: scroll;
    margin-left: -1%;
    z-index: 900;

    #site-navigation {
      background-color: transparent;
    }
  }
  .header-logo-home svg {
    margin-top: rem-calc(1);
    margin-left: rem-calc(-7);
  }

  header#masthead,
  .title-bar {
    background-color: transparent;
    width: 98%;
    margin: 0 auto;

  }
  #mobile-menu {
    padding: 1.25rem .5rem;

    &,
    & > ul.vertical.menu {
      background-color: transparent;
      top: rem-calc(70);
      li {
        margin: .625rem 0;
      }
    }
  }
  .menu-icon-close {
    width: 37px;
    justify-content: center;
  }
  .header-logo-home #Header {
    fill: #fff !important;
  }
  #searchform {
    width: 100%;
    input {
      max-width: 98%;
      border-bottom: 2px solid $white;
    }
  }
}

// 2. Mobile
// ---------

